# course_work_4

./: README.md  config.py  main.py  pyproject.toml
src/: api.py  func.py  saver.py  vacancy.py
tests/: test_api.py  test_func.py  test_saver.py  test_vacancy.py
